--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Mi primer etiqueta</h1>
+    <h2>Mi primer etiqueta</h2>
+    <h3>Mi primer etiqueta</h3>
+    <h4>Mi primer etiqueta</h4>
+    <h5>Mi primer etiqueta</h5>
+    <h6>Mi primer etiqueta</h6>
+    <p>Esto es un parrafo</p>
 </body>
 </html>
