--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 
         <nav class="navbar">
             <ul>
-                <li>Platform</li>
-                <li>Pricing</li>
-                <li>Customers</li>
-                <li>Resources</li>
-                <li>About</li>
+                <li class="menu-item">Platform</li>
+                <li class="menu-item">Pricing</li>
+                <li class="menu-item">Customers</li>
+                <li class="menu-item">Resources</li>
+                <li class="menu-item">About</li>
               </ul>
         </nav>
 
         <div class="actions">
-            <a>Entrar</a>
+            <a href="#">Entrar</a>
             <button>Comenzar prueba</button>
         </div>
     </header>
